--- a/jobdelas/src/main/resources/templates/usuario/tarefas.html
+++ b/jobdelas/src/main/resources/templates/usuario/tarefas.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="form-group">
-        <h1>Lista de Tarefas</h1>
+        <h1 class="main-titulo">Lista de Tarefas</h1>
         <form action="POST"></form>
-        <div>
+        <div class="container-input-tarefas">
             <input type="text" class="tituloTarefa" placeholder="Título da Tarefa">
             <textarea class="descricao" placeholder="Descrição da Tarefa"></textarea>
             <button type="submit" class="botao_addTarefa">Adicionar Tarefa</button>
