--- a/dev_frontend/index.css
+++ b/dev_frontend/index.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+
 * {
     outline: none !important;
     margin: 0 ;
     padding: 0; 
-    font-family: arial;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 400;
 }
 
 
@@ -10,11 +14,17 @@ body {
     background-color: #B378FF;
 }
 
+
+
+
+
 button:focus {
     border-color: #006ff7; 
     -webkit-box-shadow: none; 
     box-shadow: none !important; 
 }
+
+
 .form-control:focus{ 
     border-color: rgb(0, 102, 255)7ff; 
     -webkit-box-shadow: none; 
@@ -24,9 +34,10 @@ button:focus {
 .container_principal {
     margin: 40px;
     display: flex;
-    align-items: baseline;
+    align-items: start;
     gap: 50px;
     justify-content: space-between;
+
 }
 
 
@@ -37,6 +48,78 @@ button:focus {
     gap: 30px;
     width: 75%; 
 }
+
+
+/* Lateral */
+
+.lateral_home {
+  width: 20%; /* Definir uma largura fixa para a lateral_home */
+  background-color: white;
+  border-radius: 15px;
+  padding: 10px;
+}
+
+.comprossissos {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center !important;
+  justify-content: center;
+}
+
+.compromissos h3 {
+  color: #B378FF;
+  text-align: center;
+  font-weight: 600;
+  margin-top: 10px;
+}
+.tarefa {
+  background-color: #fff;
+  border: 1px solid #e3d0ff;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px; /
+}
+
+.titulo-tarefa {
+  font-weight: bold;
+  text-align: c;
+  color: #B378FF; 
+}
+
+#btnAdicionarTarefa {
+  background-color: #B378FF;
+  color: #fff;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+
+.botoes-tarefa {
+  display: flex;
+  gap: 10px;
+}
+
+.concluir-tarefa , .atualizar-tarefa{
+  background-color: #B378FF;
+  color: #fff;
+  border: none;
+  padding: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.concluir-tarefa:hover, .atualizar-tarefa:hover{
+  background-color: #9254DE;
+}
+
+
+
+
+/* Fim da lateral */
 
   .card {
     width: 100%;
@@ -62,6 +145,14 @@ button:focus {
   button {
     background-color: #B378FF !important;
     cursor:pointer;
+    border: 1px solid white !important;
+}
+
+button:hover {
+  background: linear-gradient(to bottom, #B378FF 75%, #ffffff00 25%) !important;
+  border: 1px solid #B378FF !important;
+  outline: 1px solid #B378FF;
+  text-shadow: 1px 1px 2px #9254DE;
 
 }
 
@@ -130,14 +221,8 @@ button:focus {
 
 
 
-  .lateral_home {
-    width: 20%; /* Definir uma largura fixa para a lateral_home */
-    background-color: white;
-       padding: 20px;
-/* Adicionar algum espaçamento interno */
-}
 
-/* Adicione ao seu CSS existente */
+
 
 /* Estilo geral para a área de postagens */
 .feed {
@@ -205,12 +290,45 @@ button:focus {
     cursor: pointer;
 }
 
-/* Adicione transições suaves nos botões para um efeito mais bonito */
 .like-button, .share-button, .comment-button {
     transition: background-color 0.3s, color 0.3s;
 }
 
-/* Efeito de hover nos botões */
 .like-button:hover, .share-button:hover, .comment-button:hover {
     background-color: #9254DE; /* Cor mais escura no hover */
 }
+
+
+/* Modal tarefa */
+
+.modaltarefa {
+  gap:20px;
+}
+
+.modaltarefa .modal-body .form-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap:10px;
+}
+
+.modaltarefa .modal-body .form-group button {
+  background: #B378FF;
+  border: 1px solid #B378FF !important;
+  border-radius: 10px;
+  width: min-content;
+  align-self: flex-end;
+}
+
+.list-group .btn-group {
+  display: flex;
+  gap:7px;
+}
+
+.btn-close {
+  background-color: transparent !important;
+  color: white;
+  opacity: 1 !important;
+  border: none !important;
+}
+
