Alterações de pastas

--- a/jobdelas/src/main/resources/templates/login/login.html
+++ b/jobdelas/src/main/resources/templates/login/login.html
@@ -45,7 +45,7 @@
                         Entrar
                     </button>
                     <div>
-                        <p style="text-align: center; color: #B378FF;">OU</p>
+                        <p style="text-align: center; color: #B378FF; margin-top: 10px;">OU</p>
                     </div>
                     <div style="display: flex; justify-content: center;">
                         <button id="botao-formulario" class="btn" role="button" type="submit">
