--- a/jobdelas/src/main/resources/templates/usuario/usuario.html
+++ b/jobdelas/src/main/resources/templates/usuario/usuario.html
@@ -4,14 +4,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../../static/css/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
   <title>Atualizar Usuário</title>
 </head>
 
 <body>
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
-    Perfil
+  <button class="botao-perfil" data-toggle="modal" data-target="#myModal" style="border: none; background-color: #fff; width: 55px; cursor: pointer;">
+    <img src="/img/fotoUsuario.png" class="img-perfil" style="border-radius: 20px; width: 50px; border: none;" alt="Imagem no Botão">
   </button>
 
   <!-- Modal -->
