--- a/jobdelas/src/main/resources/templates/index.html
+++ b/jobdelas/src/main/resources/templates/index.html
@@ -3,53 +3,379 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../assets/css/index.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.18.0/font/bootstrap-icons.css"
       integrity="sha384-rI2DBIG3Fv2jRwe7z9tc3R8pWFM9gGQVoTo5hcc4M2jtEkhl1ykI78zY3hY5FGEW"
       crossorigin="anonymous"
     />
-    <link rel="icon" href="/img/iconehtml.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="/css/header.css" />
 
     <title>JobDelas</title>
   </head>
   <body>
     <header class="header">
       <nav class="nav">
-        <a href="/">
-          <p><i class="fa-solid fa-house"></i> Início</p>
-        </a>
-        <a href="/vagas">
-          <p><i class="fa fa-briefcase"></i> Vagas</p>
-        </a>
-        <a href="/mensagens">
-          <p><i class="fa fa-envelope"></i> Mensagens</p>
-        </a>
-        <a href="/cursos">
-          <p><i class="fa fa-graduation-cap"></i> Cursos</p>
-        </a>
+        <ul>
+          <li>
+            <a href="/">
+              <div><i class="fa-solid fa-house"></i> Início</div>
+            </a>
+          </li>
+          <li>
+            <a href="/vagas">
+              <div><i class="fa fa-briefcase"></i> Vagas</div>
+            </a>
+          </li>
+          <li>
+            <a href="/mensagens">
+              <div><i class="fa fa-envelope"></i> Chat</div>
+            </a>
+          </li>
+          <li>
+            <a href="/cursos">
+              <div><i class="fa fa-graduation-cap"></i> Cursos</div>
+            </a>
+          </li>
+        </ul>
       </nav>
-      <img src="/img/logo.png" alt="logo do jobdelas" />
+      <img src="/img/logoRoxa.png" class="logo_jobdelas" alt="logo do jobdelas" />
       <div class="search_bar">
-        <input type="text" placeholder="Pesquisar" />
-        <p>
+        <div class="search_container">
+          <input type="text" placeholder="Pesquisar" />
           <i class="fa fa-search"></i>
-        </p>
-        <!-- Substitua o caminho pelo seu ícone de perfil -->
-        <img src="caminho/do/seu/iconfoto.png" alt="foto do usuário" />
+        </div>
+        <button class="botao-perfil" data-toggle="modal" data-target="#myModal" style="border: none; background-color: #fff; width: 55px; cursor: pointer;">
+          <img src="/img/iconfoto.png" class="img-perfil" style="width: 50px; border: none; height: 50px;" alt="Imagem no Botão">
+        </button>
+      
+        <!-- Modal -->
+        <div class="modal" id="myModal">
+          <div class="modal-dialog">
+            <div class="modal-content">
+      
+              <!-- Cabeçalho do Modal -->
+              <div class="modal-header">
+                <h4 class="modal-title">Perfil</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+              </div>
+      
+              <!-- Corpo do Modal -->
+              <div class="modal-body">
+                <form method="PUT" class="formulario" th:object="${usuario}" enctype="multipart/form-data">
+                  <div class="form-group">
+                    <label for="imageUpload">Anexar Foto de Perfil:</label>
+                    <input type="file" class="form-control-file" id="imageUpload" />
+                  </div>
+                  <div class="form-group">
+                    <label for="nome">Nome:</label>
+                    <input type="text" class="form-control" id="nome" required />
+                  </div>
+      
+                  <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="text" class="form-control" id="email" required />
+                  </div>
+      
+                  <div class="form-group">
+                    <label for="senha">Senha:</label>
+                    <input type="password" class="form-control" id="senha" required />
+                  </div>
+      
+                  <div class="form-group">
+                    <label for="resumo">Resumo:</label>
+                    <textarea class="form-control" id="resumo"></textarea>
+                  </div>
+      
+                  <div class="form-group">
+                    <label for="telefone">Telefone:</label>
+                    <input type="text" class="form-control" id="telefone" required />
+                  </div>
+      
+                  <div class="form-group">
+                    <label for="portfolio">Link para o Portfólio:</label>
+                    <input type="text" class="form-control" id="portfolio" />
+                  </div>
+                </form>
+              </div>
+      
+              <!-- Rodapé do Modal -->
+              <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Fechar</button>
+                <button type="submit" class="btn btn-primary">Atualizar</button>
+              </div>
+      
+            </div>
+          </div>
+        </div>
       </div>
     </header>
-   
+    <main>
+      <section class="container_principal">
+        <section class="lateral_home">
+          <section class="compromissos">
+            <h3>Lista de Tarefas</h3>
+
+            <!-- Tarefas -->
+            <div class="tarefa">
+              <div class="titulo-tarefa">Reunião com Equipe</div>
+              <div class="descricao-tarefa">
+                Preparar agenda para a reunião.
+              </div>
+              <div class="botoes-tarefa">
+                <button class="concluir-tarefa">
+                  <i class="fa fa-check"></i> Concluir
+                </button>
+                <button class="atualizar-tarefa">
+                  <i class="fa fa-edit"></i> Atualizar
+                </button>
+              </div>
+            </div>
+
+            <div class="tarefa">
+              <div class="titulo-tarefa">Projeto X</div>
+              <div class="descricao-tarefa">
+                Revisar código e fazer melhorias.
+              </div>
+            </div>
+
+            <!-- Botão para adicionar tarefa -->
+            <button
+              id="btnAdicionarTarefa"
+              class="botao_criarpostagem"
+              data-toggle="modal"
+              data-target="#myModal"
+            >
+              Adicionar Tarefa
+            </button>
+          </section>
+        </section>
+
+        <section class="container_postagem">
+          <div class="card">
+            <div class="card-body">
+              <img src="/img/iconfoto.png" alt="User" class="user-photo" />
+              <h3>O que você está pensando?</h3>
+              <button
+                class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#writePostModal"
+              >
+                Postar
+              </button>
+            </div>
+          </div>
+
+          <div class="modal" id="writePostModal">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">Compartilhar Momento Especial</h5>
+                  <button type="button" class="close" data-dismiss="modal">
+                    &times;
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <div class="form-group">
+                    <textarea
+                      class="form-control"
+                      id="postTextarea"
+                      rows="4"
+                      placeholder="Descreva seu momento especial..."
+                    ></textarea>
+                  </div>
+                  <div class="form-group">
+                    <label for="imageUpload">Anexar Imagem/Arquivo:</label>
+                    <input
+                      type="file"
+                      class="form-control-file"
+                      id="imageUpload"
+                    />
+                  </div>
+
+                  <div class="form-group">
+                    <label for="tagsInput">Adicionar Tags/Assuntos:</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="tagsInput"
+                      placeholder="Separadas por vírgulas"
+                    />
+                  </div>
+                </div>
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    class="botao_criarpostagem cancelar"
+                    data-dismiss="modal"
+                  >
+                    Cancelar
+                  </button>
+                  <button
+                    type="button"
+                    class="botao_criarpostagem compartilhar"
+                    onclick="submitPost()"
+                  >
+                    Compartilhar
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="feed">
+            <div class="post">
+              <div class="user-info">
+                <img src="iconfoto.png" alt="User" />
+                <h4>Nome Usuario</h4>
+              </div>
+              <p class="post-date">Publicado em 25 de Agosto de 2023</p>
+              <p class="post-content">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Possimus saepe ea pariatur, ad quidem vitae obcaecati rem
+                quisquam quis iste sint minus. Explicabo libero alias, aperiam
+                eaque aspernatur doloribus minima! Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Fugiat iure aliquid culpa enim
+                voluptates porro, ipsam sint magni cum id libero soluta
+                expedita, odit molestias cupiditate consequatur sunt laboriosam?
+                Sunt! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Iusto exercitationem tenetur sit ullam fugit quam aspernatur aut
+                ipsam impedit id pariatur, numquam fuga minus. Facere ex
+                doloremque maiores ipsam facilis. Lorem ipsum dolor sit amet,
+                consectetur adipiscing elit. Nullam auctor euismod turpis eget
+                volutpat.
+              </p>
+              <div class="post-actions">
+                <button class="like-button">Curtir</button>
+                <button class="share-button">Compartilhar</button>
+                <button class="comment-button">Comentar</button>
+              </div>
+            </div>
+            <div class="post">
+              <div class="user-info">
+                <img src="iconfoto.png" alt="User" />
+                <h4>Nome Usuario</h4>
+              </div>
+              <p class="post-date">Publicado em 25 de Agosto de 2023</p>
+              <p class="post-content">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Pariatur magni minima harum doloremque, blanditiis natus
+                corporis reprehenderit officiis, aut quo nihil. Officiis fugiat
+                quisquam architecto impedit. Delectus perferendis eos nemo!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+                explicabo quis debitis, iure quia commodi tempore accusantium
+                quos saepe, officia beatae adipisci dicta! Sed porro natus,
+                praesentium ab labore exercitationem. Lorem ipsum dolor sit amet
+                consectetur, adipisicing elit. Vitae optio ut debitis assumenda
+                dolore repellendus, beatae quaerat dignissimos voluptatem
+                quisquam, ipsam numquam, totam nam? Sequi voluptas alias est
+                veritatis impedit! Lorem ipsum dolor sit amet, consectetur
+                adipisicing elit. Architecto inventore alias dolores facilis
+                dolorem voluptatibus voluptates eos, fuga recusandae ratione
+                magnam esse rem voluptatem accusamus distinctio repellendus amet
+                commodi ipsam! Lorem ipsum dolor, sit amet consectetur
+                adipisicing elit. Explicabo unde nihil nemo corrupti praesentium
+                aut, quo maiores numquam sequi soluta dolorem expedita ipsam
+                dolor inventore odit ratione excepturi exercitationem omnis!
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus
+                deserunt repellendus omnis. Et deleniti sapiente vitae
+                distinctio tempora ipsa aut labore officiis nesciunt dolores,
+                quis sed vel, quae accusamus assumenda? Lorem ipsum, dolor sit
+                amet consectetur adipisicing elit. Quam dolores tenetur rerum.
+                Esse unde doloribus, facilis quibusdam natus placeat harum dolor
+                excepturi, aperiam aliquid nam architecto temporibus debitis
+                nobis veritatis. Lorem ipsum dolor sit amet consectetur,
+                adipisicing elit. Nemo quo repellat neque laboriosam reiciendis
+                recusandae delectus. Repellendus voluptate quam animi nisi magni
+                molestias iusto eaque ab minus, libero consequatur hic.Lorem
+                ipsum dolor sit amet, consectetur adipisicing elit. Possimus
+                saepe ea pariatur, ad quidem vitae obcaecati rem quisquam quis
+                iste sint minus. Explicabo libero alias, aperiam eaque
+                aspernatur doloribus minima! Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Fugiat iure aliquid culpa enim
+                voluptates porro, ipsam sint magni cum id libero soluta
+                expedita, odit molestias cupiditate consequatur sunt laboriosam?
+                Sunt! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Iusto exercitationem tenetur sit ullam fugit quam aspernatur aut
+                ipsam impedit id pariatur, numquam fuga minus. Facere ex
+                doloremque maiores ipsam facilis. Lorem ipsum dolor sit amet,
+                consectetur adipiscing elit. Nullam auctor euismod turpis eget
+                volutpat.
+              </p>
+              <div class="post-actions">
+                <button class="like-button">Curtir</button>
+                <button class="share-button">Compartilhar</button>
+                <button class="comment-button">Comentar</button>
+              </div>
+            </div>
+          </div>
+        </section>
+      </section>
+
+      <!-- Modals -->
+      <div
+        class="modal fade"
+        id="myModal"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="myModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content modaltarefa">
+            <div class="modal-header">
+              <h4 class="modal-title" id="myModalLabel">Lista de Tarefa</h4>
+              <button
+                type="button"
+                class="close btn-close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="form-group">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Qual sua tarefa?"
+                />
+                <textarea
+                  class="form-control"
+                  placeholder="Descrição da Tarefa"
+                  rows="3"
+                  style="max-height: 72px; overflow-y: auto"
+                ></textarea>
+                <small class="text-muted">Máximo de 3 linhas.</small>
+                <button type="button" class="btn btn-primary botao_addTarefa">
+                  Adicionar
+                </button>
+              </div>
+
+              <ul class="list-group" id="modalTaskList">
+                <li
+                  class="list-group-item d-flex justify-content-between align-items-center"
+                >
+                  Tarefa 1
+                  <button type="button" class="btn btn-success">
+                    <i class="fa fa-check"></i> Concluir
+                  </button>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
-    <script src="caminho-do-seu-arquivo-js/script.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
