--- a/jobdelas/src/main/resources/static/css/style.css
+++ b/jobdelas/src/main/resources/static/css/style.css
@@ -68,15 +68,69 @@ li {
 /* Fim Tarefas */
 
 /* Começo vagas */
+
 .input-pesquisa {
-    background-color: #B378FF;
-    height: 250px;
-    margin-bottom: 100px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin:60px 40px;
+
 }
+
+.input-pesquisa,
+.modaltarefa {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 15px;
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 15px;
+  border:1px solid #B378FF;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.input-group-text {
+  font-weight: bold;
+  color: #B378FF;
+
+}
+
+
+.form-control {
+  border: 1px solid #B378FF;
+  border-radius: 5px;
+  padding: 20px;
+  width: 45%; 
+  box-sizing: border-box;
+  border:1px solid #B378FF !important;
+
+}
+
+.form-control:hover, .form-control:focus {
+    outline: none;
+    border:1px solid #B378FF !important;
+    box-shadow: none;
+
+}
+
+.buscar-vagas,
+.botao_criarpostagem {
+  background-color: transparent !important;
+  color: transparent !important;
+  height: max-content;  
+  border: none;
+  border-radius: 5px;
+  cursor: pointer !important;
+}
+
+.buscar-vagas i {
+    font-size: 30px;
+    color: #B378FF !important
+    ;
+}
+
+.buscar-vagas i:hover  {
+    text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1) !important;
+}
+
 
 .form-control {
     height: 40px;
@@ -94,8 +148,9 @@ li {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-    width: 100%;
     justify-content: space-evenly;
+    margin:60px 40px;
+
 
 }
 
