--- a/jobdelas/src/main/resources/templates/vagas/vagas.html
+++ b/jobdelas/src/main/resources/templates/vagas/vagas.html
@@ -1,100 +1,114 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/css/style.css">
-  
-  
-  <title>Vagas</title>
-</head>
+    <title>Vagas</title>
+  </head>
 
-<body>
-  <section class="input-pesquisa">
-    <span class="input-group-text">Cargo</span>
-    <input type="text" aria-label="Cargo" placeholder="Cargo" class="form-control" id="inputCargo" />
+  <body>
+    <section class="input-pesquisa">
+      <span class="input-group-text">Cargo</span>
+      <input
+        type="text"
+        aria-label="Cargo"
+        placeholder="Cargo"
+        class="form-control"
+        id="inputCargo"
+      />
 
-    <span class="input-group-text">Localização</span>
-    <input type="text" aria-label="Localização" placeholder="Localização" class="form-control" id="inputLocalizacao" />
-    <button class="buscar-vagas">Buscar Vagas</button>
-  </section>
+      <span class="input-group-text">Localização</span>
+      <input
+        type="text"
+        aria-label="Localização"
+        placeholder="Localização"
+        class="form-control"
+        id="inputLocalizacao"
+      />
+      <button class="buscar-vagas">
+        <i class="fa fa-search"></i>
+      </button>
+    </section>
 
-  <section class="container-vagas">
-
-    <div class="vagas">
-      <h2 class="funcao">Função</h2>
-      <p class="empresa">Nome da empresa</p>
-      <p class="salario">Salário</p>
-      <p class="sobre">Sobre</p>
-      <p class="sobre-vaga">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur natus
-        qui nesciunt voluptatem mollitia quia minima ducimus fugiat inventore
-        porro. Dolor eveniet ducimus quidem doloremque maxime sint
-        voluptatibus omnis itaque!
-      </p>
-      <div class="container-info-localizacao">
-        <p class="localizacao">Localização: <span>Algum lugar</span></p>
-        <button type="submit" class="aplicar">Aplicar</button>
+    <section class="container-vagas">
+      <div class="vagas">
+        <h2 class="funcao">Função</h2>
+        <p class="empresa">Nome da empresa</p>
+        <p class="salario">Salário</p>
+        <p class="sobre">Sobre</p>
+        <p class="sobre-vaga">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur natus
+          qui nesciunt voluptatem mollitia quia minima ducimus fugiat inventore
+          porro. Dolor eveniet ducimus quidem doloremque maxime sint
+          voluptatibus omnis itaque!
+        </p>
+        <div class="container-info-localizacao">
+          <p class="localizacao">Localização: <span>Algum lugar</span></p>
+          <button type="submit" class="aplicar">Aplicar</button>
+        </div>
+        <span class="status">Status da vaga</span>
       </div>
-      <span class="status">Status da vaga</span>
-    </div>
 
-    <div class="vagas">
-      <h2 class="funcao">Função</h2>
-      <p class="empresa">Nome da empresa</p>
-      <p class="salario">Salário</p>
-      <p class="sobre">Sobre</p>
-      <p class="sobre-vaga">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur natus
-        qui nesciunt voluptatem mollitia quia minima ducimus fugiat inventore
-        porro. Dolor eveniet ducimus quidem doloremque maxime sint
-        voluptatibus omnis itaque!
-      </p>
-      <div class="container-info-localizacao">
-        <p class="localizacao">Localização: <span>Algum lugar</span></p>
-        <button type="submit" class="aplicar">Aplicar</button>
+      <div class="vagas">
+        <h2 class="funcao">Função</h2>
+        <p class="empresa">Nome da empresa</p>
+        <p class="salario">Salário</p>
+        <p class="sobre">Sobre</p>
+        <p class="sobre-vaga">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur natus
+          qui nesciunt voluptatem mollitia quia minima ducimus fugiat inventore
+          porro. Dolor eveniet ducimus quidem doloremque maxime sint
+          voluptatibus omnis itaque!
+        </p>
+        <div class="container-info-localizacao">
+          <p class="localizacao">Localização: <span>Algum lugar</span></p>
+          <button type="submit" class="aplicar">Aplicar</button>
+        </div>
+        <span class="status">Status da vaga</span>
       </div>
-      <span class="status">Status da vaga</span>
-    </div>
 
-    <div class="vagas">
-      <h2 class="funcao">Função</h2>
-      <p class="empresa">Nome da empresa:</p>
-      <p class="salario">Salário</p>
-      <p class="sobre">Sobre</p>
-      <p class="sobre-vaga">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur natus
-        qui nesciunt voluptatem mollitia quia minima ducimus fugiat inventore
-        porro. Dolor eveniet ducimus quidem doloremque maxime sint
-        voluptatibus omnis itaque!
-      </p>
-      <div class="container-info-localizacao">
-        <p class="localizacao">Localização: <span>Algum lugar</span></p>
-        <button type="submit" class="aplicar">Aplicar</button>
+      <div class="vagas">
+        <h2 class="funcao">Função</h2>
+        <p class="empresa">Nome da empresa:</p>
+        <p class="salario">Salário</p>
+        <p class="sobre">Sobre</p>
+        <p class="sobre-vaga">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur natus
+          qui nesciunt voluptatem mollitia quia minima ducimus fugiat inventore
+          porro. Dolor eveniet ducimus quidem doloremque maxime sint
+          voluptatibus omnis itaque!
+        </p>
+        <div class="container-info-localizacao">
+          <p class="localizacao">Localização: <span>Algum lugar</span></p>
+          <button type="submit" class="aplicar">Aplicar</button>
+        </div>
+        <span class="status">Status da vaga</span>
       </div>
-      <span class="status">Status da vaga</span>
-    </div>
 
-    <div class="vagas">
-      <h2 class="funcao">Função</h2>
-      <p class="empresa">Nome da empresa</p>
-      <p class="salario">Salário</p>
-      <p class="sobre">Sobre</p>
-      <p class="sobre-vaga">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur natus
-        qui nesciunt voluptatem mollitia quia minima ducimus fugiat inventore
-        porro. Dolor eveniet ducimus quidem doloremque maxime sint
-        voluptatibus omnis itaque!
-      </p>
-      <div class="container-info-localizacao">
-        <p class="localizacao">Localização: <span>Algum lugar</span></p>
-        <button type="submit" class="aplicar">Aplicar</button>
+      <div class="vagas">
+        <h2 class="funcao">Função</h2>
+        <p class="empresa">Nome da empresa</p>
+        <p class="salario">Salário</p>
+        <p class="sobre">Sobre</p>
+        <p class="sobre-vaga">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur natus
+          qui nesciunt voluptatem mollitia quia minima ducimus fugiat inventore
+          porro. Dolor eveniet ducimus quidem doloremque maxime sint
+          voluptatibus omnis itaque!
+        </p>
+        <div class="container-info-localizacao">
+          <p class="localizacao">Localização: <span>Algum lugar</span></p>
+          <button type="submit" class="aplicar">Aplicar</button>
+        </div>
+        <span class="status">Status da vaga</span>
       </div>
-      <span class="status">Status da vaga</span>
-    </div>
-  </section>
+    </section>
 
-</body>
-
+    <script
+      src="https://kit.fontawesome.com/cda1aa7b4f.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
