Fix: arrumando alguns estilos

--- a/jobdelas/src/main/resources/static/css/home.css
+++ b/jobdelas/src/main/resources/static/css/home.css
@@ -1,13 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Quicksand', sans-serif;
+
  
 }
 
 :root{
     --rosa-primario: #B378FF;
-    --branco: #fff;
+    --branco: #ffffff;
     --cinza-claro: #706273;
 }
 
