--- a/jobdelas/src/main/resources/templates/fragments/_header.html
+++ b/jobdelas/src/main/resources/templates/fragments/_header.html
@@ -2,12 +2,12 @@
   <nav class="nav">
     <ul>
       <li>
-        <a href="/">
+        <a href="jobdelas">
           <div><i class="fa-solid fa-house"></i> Início</div>
         </a>
       </li>
       <li>
-        <a href="/vagas">
+        <a href="vagas">
           <div><i class="fa fa-briefcase"></i> Vagas</div>
         </a>
       </li>
