--- a/jobdelas/src/main/resources/templates/index.html
+++ b/jobdelas/src/main/resources/templates/index.html
@@ -81,7 +81,7 @@
           <div class="feed">
             <div class="post">
               <div class="user-info">
-                <img src="iconfoto.png" alt="User" />
+                <img src="/img/iconfoto.png" alt="User" />
                 <h4>Nome Usuario</h4>
               </div>
               <p class="post-date">Publicado em 25 de Agosto de 2023</p>
@@ -108,7 +108,7 @@
             </div>
             <div class="post">
               <div class="user-info">
-                <img src="iconfoto.png" alt="User" />
+                <img src="/img/iconfoto.png" alt="User" />
                 <h4>Nome Usuario</h4>
               </div>
               <p class="post-date">Publicado em 25 de Agosto de 2023</p>
