--- a/jobdelas/src/main/resources/static/css/header.css
+++ b/jobdelas/src/main/resources/static/css/header.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     list-style: none;
+    margin: 0;
 
 }
 .header {
@@ -10,6 +11,7 @@
     background-color: #ffffff;
     align-items: center;
 }
+
 .header img {
     height: 35px;
 }
@@ -20,6 +22,7 @@
     justify-content: space-around;
     align-content: baseline !important;
     align-items: baseline !important;
+    background-color: #fff;
 }
 
 .nav ul {
@@ -44,6 +47,7 @@
     width: 70px;
     padding-top: 5px;
     border: 1px solid white !important;
+    background-color: #fff;
 
 }
 
