--- a/jobdelas/src/main/resources/templates/fragments/_header.html
+++ b/jobdelas/src/main/resources/templates/fragments/_header.html
@@ -17,7 +17,7 @@
         </a>
       </li>
       <li>
-        <a href="/cursos">
+        <a href="cursos">
           <div><i class="fa fa-graduation-cap"></i> Cursos</div>
         </a>
       </li>
