--- a/jobdelas/src/main/resources/templates/fragments/_header.html
+++ b/jobdelas/src/main/resources/templates/fragments/_header.html
@@ -1,48 +1,36 @@
 <header class="header">
   <nav class="nav">
     <ul>
-      <li>
+      <li class="caixa-item-navbar">
         <a href="jobdelas">
           <div><i class="fa-solid fa-house"></i> Início</div>
         </a>
       </li>
-      <li>
+      <li class="caixa-item-navbar">
         <a href="vagas">
           <div><i class="fa fa-briefcase"></i> Vagas</div>
         </a>
       </li>
-      <li>
+      <li class="caixa-item-navbar">
         <a href="/mensagens">
           <div><i class="fa fa-envelope"></i> Chat</div>
         </a>
       </li>
-      <li>
+      <li class="caixa-item-navbar">
         <a href="/cursos">
           <div><i class="fa fa-graduation-cap"></i> Cursos</div>
         </a>
       </li>
     </ul>
   </nav>
-  <img
-    src="/img/logoRoxa.png"
-    class="logo_jobdelas"
-    alt="logo do jobdelas"
-  />
+  <img src="/img/logoRoxa.png" class="logo_jobdelas" alt="logo do jobdelas" />
   <div class="search_bar">
     <div class="search_container">
       <input type="text" placeholder="Pesquisar" />
       <i class="fa fa-search"></i>
     </div>
-    <button
-      class="botao-perfil"
-      data-toggle="modal"
-      data-target="#editarModal"
-    >
-      <img
-        src="/img/iconfoto.png"
-        class="img_perfil"
-        alt="Imagem no Botão"
-      />
+    <button class="botao-perfil" data-toggle="modal" data-target="#editarModal">
+      <img src="/img/iconfoto.png" class="img_perfil" alt="Imagem no Botão" />
     </button>
   </div>
 </header>
