--- a/jobdelas/src/main/resources/static/css/style.css
+++ b/jobdelas/src/main/resources/static/css/style.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
-*{
-    padding: 0;
+
+* {
+    outline: none !important;
+    margin: 0 ;
+    padding: 0; 
     font-family: 'Quicksand', sans-serif;
-    margin: 0;
+    font-weight: 400;
 }
 
 
